about page and some styles added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -58,8 +58,8 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Welcome To My Studio!</div>
-          <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
+          <div class="intro-lead-in">Hello! <span style="color: #fed136">Welcome</span> to my portfolio</div>
+          <!-- <div class="intro-heading text-uppercase"><span style="color: #fed136">Welcome</span> to my portfolio</div> -->
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Resume</a>
         </div>
       </div>
@@ -168,7 +168,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">About</h2>
+            <h2 class="section-heading text-uppercase">About Me</h2>
             <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
           </div>
         </div>
@@ -177,64 +177,54 @@
             <ul class="timeline">
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="img/about/my-image.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>2009-2011</h4>
-                    <h4 class="subheading">Our Humble Beginnings</h4>
+                    <h4>Hello there!</h4>
+                    <h4 class="subheading">My Name is Inomzhon</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted"> I am a fullstack web developer with certification from the Rutgers Web Development Coding Bootcamp. I also have a Master’s Degree in Finance and Financial Management Services. I would consider myself pretty proficient in <span style="color: #f1be04; font-weight: bold">JavaScript</span> and have an intermediate skill level in <span style="color: #f1be04; font-weight: bold">HTML, CSS, Bootstrap, HandlebarsJS, NodeJS, MySQL, MongoDB, jQuery, ReactJS, ExpressJS, Git/GitHub </span> and some other concepts covered in the bootcamp.</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="img/about/team.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>March 2011</h4>
-                    <h4 class="subheading">An Agency is Born</h4>
+                    <h4>Awesome Team</h4>
+                    <h4 class="subheading">Project <a href="https://whispering-lowlands-19007.herokuapp.com/" target="bank"><span style="color: #f1be04; font-weight: bold">STUFF</span></a></h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">It was an amazing experience working with this very talented and skilled people on Full Stack App Project! A basic full stack application that allows: 
+                      Rent out your stuff or rent stuff that you need.
+                      Share service or get service.
+                      Using MySQL, Express, React, Node etc.
+                      </p>
                   </div>
                 </div>
               </li>
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="img/about/bank.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>December 2012</h4>
-                    <h4 class="subheading">Transition to Full Service</h4>
+                    <h4>Bank Eskhata</h4>
+                    <h4 class="subheading">Front End Developer</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>July 2014</h4>
-                    <h4 class="subheading">Phase Two Expansion</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">My first Web Development experience. Worked on updating UI using HTML, CSS, jQuery, JavaScript.</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <h4>Be Part
-                    <br>Of Our
+                    <br>Of My
                     <br>Story!</h4>
                 </div>
               </li>
@@ -256,11 +246,11 @@
       </div>
     </div>
     <div class="row text-center">
-     <img src="my-resume.pdf" alt="">
+     <img src="Inom-Ibragimov-Resume.pdf" alt="">
     </div>
-    <object data="my-resume.pdf" type="application/pdf" width="100%" height="800px">
+    <object data="Inom-Ibragimov-Resume.pdf" type="application/pdf" width="100%" height="800px">
       <p>It appears you don't have a PDF plugin for this browser. No biggie... you can
-          <a href="my-resume.pdf">click here to download the PDF file.</a>
+          <a href="Inom-Ibragimov-Resume.pdf">click here to download the PDF file.</a>
       </p>
   </object>
 </div>
@@ -272,7 +262,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Contact Me</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">I'd love to work on a project with you. Please reach out</h3>
           </div>
         </div>
         <div class="row">
@@ -316,34 +306,24 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2018</span>
+            <span class="copyright">Copyright &copy; Inomzhon Ibragimov 2018</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="fa fa-twitter"></i>
+                  <i class="fa fa-stack-overflow"></i>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="fa fa-facebook"></i>
+                  <i class="fa fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
                   <i class="fa fa-linkedin"></i>
                 </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <ul class="list-inline quicklinks">
-              <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
               </li>
             </ul>
           </div>
