--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/stuff.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Threads</h4>
-              <p class="text-muted">Illustration</p>
+              <h4>Full Stack App</h4>
+              <!-- <p class="text-muted">Illustration</p> -->
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -96,11 +96,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/API_Giphy.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Explore</h4>
-              <p class="text-muted">Graphic Design</p>
+              <h4>Giphy App</h4>
+              <!-- <p class="text-muted">Graphic Design</p> -->
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -110,11 +110,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/friend.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Finish</h4>
-              <p class="text-muted">Identity</p>
+              <h4>Friend Finder App</h4>
+              <!-- <p class="text-muted">Identity</p> -->
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -124,11 +124,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/burger.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Lines</h4>
-              <p class="text-muted">Branding</p>
+              <h4>Eat-Da-Burger</h4>
+              <!-- <p class="text-muted">Branding</p> -->
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -138,11 +138,10 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/wcg.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Southwest</h4>
-              <p class="text-muted">Website Design</p>
+              <h4>World CurrencyGame</h4>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -152,11 +151,10 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/clicky.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Window</h4>
-              <p class="text-muted">Photography</p>
+              <h4>React Clicky Game</h4>
             </div>
           </div>
         </div>
@@ -169,7 +167,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">About Me</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">Fast learner, hard worker, creative thinker, problem solver, decision maker and team player who is proficient in an array of Web languages and Personnel tools.</h3>
           </div>
         </div>
         <div class="row">
@@ -204,6 +202,8 @@
                       Share service or get service.
                       Using MySQL, Express, React, Node etc.
                       </p>
+                      <a href="https://whispering-lowlands-19007.herokuapp.com/" style="color: blue; font-weight: bold" target="blank">App Webpage</a><br>
+                      <a href="https://github.com/EitanFine/Project-3" style="color: blue; font-weight: bold" target="blank">App Source</a>
                   </div>
                 </div>
               </li>
@@ -217,7 +217,9 @@
                     <h4 class="subheading">Front End Developer</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">My first Web Development experience. Worked on updating UI using HTML, CSS, jQuery, JavaScript.</p>
+                    <p class="text-muted">My first Web Development experience. Worked on updating UI using HTML, CSS, jQuery & JavaScript.</p>
+                    <a href="http://eskhata.com/en/" style="color: blue; font-weight: bold" target="blank">www.eskhata.com</a>
+
                   </div>
                 </div>
               </li>
