portfolios more info page filled with data

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Full Stack App Project</h2>
-                  <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
+                  <p class="item-intro text-muted">Inomzhon Ibragimov</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/stuff-large.jpg" alt="">
                   <p>A basic full stack application that allows:<br>
                      -Rent out your stuff or rent stuff that you need<br>
@@ -359,7 +359,6 @@
                   <ul class="list-inline">
                     <li> <a href="https://whispering-lowlands-19007.herokuapp.com/">See the App in action</a> </li>
                     <li> <a href="https://github.com/EitanFine/Project-3">App GitHub Repo Source</a> </li>
-                    <li></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -386,14 +385,13 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <h2 class="text-uppercase">Giphy API App</h2>
+                  <p class="item-intro text-muted">Inomzhon Ibragimov</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/API_Giphy-large.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>This app uses GIPHY API and AJAX calls to make a dynamic web page that populates with gifs of the user's choice. It is also mobile responsive.</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Explore</li>
-                    <li>Category: Graphic Design</li>
+                      <li> <a href="https://mail4inom.github.io/GIPHY_API/">See the App in action</a> </li>
+                      <li> <a href="https://github.com/mail4inom/GIPHY_API">App GitHub Repo Source</a> </li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -420,14 +418,23 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <h2 class="text-uppercase">Friend Finder</h2>
+                  <p class="item-intro text-muted">Inomzhon Ibragimov</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/friend-large.png" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>A compatibility-based "FriendFinder" application -- basically a dating app. This full-stack site will
+                      take in results your users' surveys, then compare their answers with those from other users. The app 
+                      will then display the name and picture of the user with the best overall match.</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Finish</li>
-                    <li>Category: Identity</li>
+                    <li>Built With</li>
+                    <li> Node.JS
+                        * Express
+                        * JavaScript
+                        * JQuery
+                        * Bootstrap
+                        * HTML
+                        * CSS</li>
+                    <li> <a href="https://afternoon-gorge-91244.herokuapp.com/">See the App in action</a> </li>
+                    <li> <a href="https://github.com/mail4inom/FriendFinder">App GitHub Repo Source</a> </li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -454,14 +461,18 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <h2 class="text-uppercase">Eat-Da-Burger</h2>
+                  <p class="item-intro text-muted">Inomzhon Ibragimov</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/burger-large.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>A full stack burger-logger web app featuring the use of Node, Express server, Handlebars for view generation and a homemade ORM. Node and MySQL are used to query and route data flow in the app.
+                      The app itself is fairly straightforward but the focus here was to practice data flow, routing, view generation, etc., in a full stack design.</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Lines</li>
-                    <li>Category: Branding</li>
+                    <li>Built With</li>
+                    <li>HTML, CSS, Javascript, Node.js, Express.js, Handlebars, MySQL, ORM, MVC.
+
+                        NPM Packages: express, method-override, body-parser, express-handlebars.</li>
+                    <li> <a href="https://blooming-caverns-56635.herokuapp.com/index">See the App in action</a> </li>
+                    <li> <a href="https://github.com/mail4inom/burger">App GitHub Repo Source</a> </li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -488,14 +499,18 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <h2 class="text-uppercase">World Currency Game!</h2>
+                  <p class="item-intro text-muted"> AKA....CrystalsColectors!</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/wcg-large.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>World Currency Game is an interactive web browser game. The app dynamically updates HTML pages with the jQuery library.
+                      Leverages JQuery Library
+                      Utilizes Bootstrap Framework
+                      Google Fonts for customizing</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Southwest</li>
-                    <li>Category: Website Design</li>
+                    <li>Built With</li>
+                    <li>HTML * CSS * Bootstrap * JQuery * Google Fonts</li>
+                    <li> <a href="https://mail4inom.github.io/week-4-game/">See the App in action</a> </li>
+                    <li> <a href="https://github.com/mail4inom/week-4-game">App GitHub Repo Source</a> </li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -522,14 +537,15 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <h2 class="text-uppercase">React Clicky Game</h2>
+                  <p class="item-intro text-muted">Inomzhon Ibragimov</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/clicky-large.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>This is a simple memory challenge game written in React</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Window</li>
-                    <li>Category: Photography</li>
+                    <li>Built With</li>
+                    <li>HTML * CSS * Bootstrap * JavaScript * Node * React</li>
+                    <li> <a href="https://mail4inom.github.io/React-Clicky-Game/">See the App in action</a> </li>
+                    <li> <a href="https://github.com/mail4inom/React-Clicky-Game">App GitHub Repo Source</a> </li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
