--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <h4 class="subheading">Front End Developer</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">My first Web Development experience. Worked on updating UI using HTML, CSS, jQuery & JavaScript.</p>
+                    <p class="text-muted">My first Web Development experience. Worked with an established team of developers and interact with product managers, marketing teams and designers Expertise in Web development using HTML, CSS, jQuery & JavaScript.</p>
                     <a href="http://eskhata.com/en/" style="color: blue; font-weight: bold" target="blank">www.eskhata.com</a>
 
                   </div>
@@ -243,7 +243,7 @@
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">RESUME</h2>
         <h3 class="section-subheading text-muted">
-          <a href="my-resume.pdf" download>Download a PDF</a>
+          <a href="Inom-Ibragimov-Resume.pdf" download>Download a PDF</a>
         </h3>
       </div>
     </div>
