--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Portfolio</h2>
+            <p class="item-intro text-muted">Please visit My <a href="https://github.com/mail4inom" style="color: #f1be04" target="blank">GitHub</a> Page for more <a href="https://github.com/mail4inom" style="color: #f1be04" target="blank">Projects.</a></p>
             <br>
           </div>
         </div>
@@ -166,7 +167,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">About Me</h2>
+            <h2 class="section-heading text-uppercase">About <span style="color: #f1be04">Me</span></h2>
             <h3 class="section-subheading text-muted">Fast learner, hard worker, creative thinker, problem solver, decision maker and team player who is proficient in an array of Web languages and Personnel tools.</h3>
           </div>
         </div>
@@ -180,7 +181,7 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>Hello there!</h4>
-                    <h4 class="subheading">My Name is Inomzhon</h4>
+                    <h4 class="subheading">My Name is <span style="color: #f1be04">INOMZHON</span></h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted"> I am a fullstack web developer with certification from the Rutgers Web Development Coding Bootcamp. I also have a Master’s Degree in Finance and Financial Management Services. I would consider myself pretty proficient in <span style="color: #f1be04; font-weight: bold">JavaScript</span> and have an intermediate skill level in <span style="color: #f1be04; font-weight: bold">HTML, CSS, Bootstrap, HandlebarsJS, NodeJS, MySQL, MongoDB, jQuery, ReactJS, ExpressJS, Git/GitHub </span> and some other concepts covered in the bootcamp.</p>
