--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">RESUME</h2>
         <h3 class="section-subheading text-muted">
-          <a href="Inom-Ibragimov-Resume.pdf" download>Download a PDF</a>
+          <!-- <a href="Inom-Ibragimov-Resume.pdf" download>Download a PDF</a> -->
         </h3>
       </div>
     </div>
