--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
               </div>
             </li>
             <li>
-              <div class="timeline-image">
+              <!-- <div class="timeline-image">
                 <img class="rounded-circle img-fluid" src="img/about/bank.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
+              </div> -->
+              <!-- <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>Bank Eskhata</h4>
                   <h4 class="subheading">Front End Developer</h4>
@@ -124,7 +124,7 @@
                   <a href="http://eskhata.com/en/" style="color: blue; font-weight: bold" target="blank">www.eskhata.com</a>
 
                 </div>
-              </div>
+              </div> -->
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
